--- a/src/main/resources/com/Pharmacy/Project/RegisterCashier.fxml
+++ b/src/main/resources/com/Pharmacy/Project/RegisterCashier.fxml
@@ -17,6 +17,11 @@
                <Font size="30.0" />
             </font>
          </Text>
+         <Button fx:id="retBut" layoutX="20.0" layoutY="26.0" mnemonicParsing="false" onAction="#goBack" prefHeight="32.0" prefWidth="68.0" style="-fx-background-color: #d73a49; -fx-background-radius: 15;" text="Back" textAlignment="CENTER" textFill="WHITE" wrapText="true">
+            <font>
+               <Font size="13.0" />
+            </font>
+         </Button>
       </children>
    </AnchorPane>
    <AnchorPane layoutX="177.0" layoutY="129.0" prefHeight="419.0" prefWidth="410.0" style="-fx-border-color: black; -fx-border-radius: 50;">
