--- a/src/main/resources/com/Pharmacy/Project/addSupplier.fxml
+++ b/src/main/resources/com/Pharmacy/Project/addSupplier.fxml
@@ -72,4 +72,9 @@
          </Button>
         </children>
     </AnchorPane>
+   <Button fx:id="retBut" layoutX="24.0" layoutY="24.0" mnemonicParsing="false" onAction="#goBack" prefHeight="32.0" prefWidth="68.0" style="-fx-background-color: #d73a49; -fx-background-radius: 15;" text="Back" textAlignment="CENTER" textFill="WHITE" wrapText="true">
+      <font>
+         <Font size="13.0" />
+      </font>
+   </Button>
 </AnchorPane>
