--- a/src/main/resources/com/Pharmacy/Project/orderMedicines.fxml
+++ b/src/main/resources/com/Pharmacy/Project/orderMedicines.fxml
@@ -29,14 +29,20 @@
                 <Font name="Verdana" size="12.0" />
             </font>
         </Button>
-        <AnchorPane layoutX="150.0" layoutY="482.0" prefHeight="118.0" prefWidth="600.0" />
+        <AnchorPane layoutX="150.0" layoutY="482.0" prefHeight="118.0" prefWidth="600.0">
+         <children>
+              <Button fx:id="orderBtn" layoutX="426.0" layoutY="27.0" mnemonicParsing="false" onAction="#orderMedicine" prefHeight="32.0" prefWidth="68.0" style="-fx-background-color: #6bc45a; -fx-background-radius: 15;" text="Order" textAlignment="CENTER" textFill="WHITE" wrapText="true">
+                  <font>
+                      <Font size="13.0" />
+                  </font>
+              </Button>
+         </children></AnchorPane>
         <Text layoutX="179.0" layoutY="162.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Unvailable Medicines" />
-        <ListView fx:id="medList" layoutX="176.0" layoutY="176.0" prefHeight="241.0" prefWidth="472.0" />
-        <Button fx:id="orderBtn" layoutX="579.0" layoutY="429.0" mnemonicParsing="false" onAction="#orderMedicine" prefHeight="32.0" prefWidth="68.0" style="-fx-background-color: #6bc45a; -fx-background-radius: 15;" text="Order" textAlignment="CENTER" textFill="WHITE" wrapText="true">
-            <font>
-                <Font size="13.0" />
-            </font>
-        </Button>
+        <ListView fx:id="medList" layoutX="182.0" layoutY="218.0" prefHeight="279.0" prefWidth="472.0" />
+      <Text layoutX="189.0" layoutY="214.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ID" />
+      <Text layoutX="231.0" layoutY="214.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Name" />
+      <Text layoutX="289.0" layoutY="214.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Quantity" />
+      <Text layoutX="369.0" layoutY="214.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Price" />
     </children>
 
 </AnchorPane>
