--- a/src/main/resources/com/Pharmacy/Project/MedicineOrders.fxml
+++ b/src/main/resources/com/Pharmacy/Project/MedicineOrders.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
 <AnchorPane prefHeight="600.0" prefWidth="750.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.Pharmacy.Project.Controllers.MedicineOrdersManage">
    <children>
@@ -28,5 +29,10 @@
             <Font size="13.0" />
          </font>
       </Button>
+      <Text layoutX="193.0" layoutY="109.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ID" />
+      <Text layoutX="232.0" layoutY="109.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Med ID" />
+      <Text layoutX="297.0" layoutY="109.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Quantity" />
+      <Text layoutX="375.0" layoutY="109.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Supplier" />
+      <Text layoutX="457.0" layoutY="109.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Total" />
    </children>
 </AnchorPane>
