--- a/src/main/resources/com/Pharmacy/Project/RemoveMedicine.fxml
+++ b/src/main/resources/com/Pharmacy/Project/RemoveMedicine.fxml
@@ -24,7 +24,7 @@
             </font>
         </Label>
         <TextField fx:id="searchMed" layoutX="180.0" layoutY="101.0" prefHeight="28.0" prefWidth="392.0" promptText="Type Medicine Name" />
-        <Button fx:id="searchBut" alignment="CENTER" contentDisplay="CENTER" layoutX="582.0" layoutY="101.0" mnemonicParsing="false" prefHeight="28.0" prefWidth="62.0" style="-fx-background-color: #009ee2; -fx-border-width: 1; -fx-border-radius: 15; -fx-background-radius: 15;" text="Search" textAlignment="CENTER" textFill="WHITE">
+        <Button fx:id="searchBut" alignment="CENTER" contentDisplay="CENTER" layoutX="582.0" layoutY="101.0" mnemonicParsing="false" onAction="#SearchMedicine" prefHeight="28.0" prefWidth="62.0" style="-fx-background-color: #009ee2; -fx-border-width: 1; -fx-border-radius: 15; -fx-background-radius: 15;" text="Search" textAlignment="CENTER" textFill="WHITE">
             <font>
                 <Font name="Verdana" size="12.0" />
             </font>
