--- a/src/main/resources/com/Pharmacy/Project/StockUpdatePage.fxml
+++ b/src/main/resources/com/Pharmacy/Project/StockUpdatePage.fxml
@@ -3,6 +3,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
@@ -17,7 +18,7 @@
                     </font>
                 </Button>
             </children></AnchorPane>
-        <Label layoutX="176.0" layoutY="33.0" text="Stock Update">
+        <Label layoutX="176.0" layoutY="21.0" text="Stock Update">
             <font>
                 <Font name="Arial Black" size="27.0" />
             </font>
@@ -30,8 +31,14 @@
                     </font>
                 </Button>
          </children></AnchorPane>
-        <Text layoutX="176.0" layoutY="115.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Available Medicines" />
+        <Text layoutX="176.0" layoutY="135.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Available Medicines" />
       <ListView fx:id="medList" layoutX="176.0" layoutY="169.0" prefHeight="300.0" prefWidth="475.0" />
       <Label fx:id="headerLabel" layoutX="176.0" layoutY="146.0" text=" " />
+      <TextField fx:id="searchMed" layoutX="176.0" layoutY="74.0" prefHeight="28.0" prefWidth="392.0" promptText="Type Medicine Name" />
+      <Button fx:id="searchBut" alignment="CENTER" contentDisplay="CENTER" layoutX="589.0" layoutY="74.0" mnemonicParsing="false" onAction="#SearchMedicine" prefHeight="28.0" prefWidth="62.0" style="-fx-background-color: #009ee2; -fx-border-width: 1; -fx-border-radius: 15; -fx-background-radius: 15;" text="Search" textAlignment="CENTER" textFill="WHITE">
+         <font>
+            <Font name="Verdana" size="12.0" />
+         </font>
+      </Button>
     </children>
 </AnchorPane>
